# rheingold

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
apps/api/: main.py  pyproject.toml
apps/api/rheingold_api/: app.py  deps.py  eeg51.py  market.py  memo_stream.py  routes.py
apps/api/tests/: test_api.py
apps/web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/backtest/: page.tsx
apps/web/app/methodology/: page.tsx
apps/web/components/: AppShell.tsx  AuctionBacktestChart.tsx  DebtScheduleTable.tsx  EmptyState.tsx  ErrorState.tsx  FarmPopover.tsx  FleetFilterBar.tsx  FleetStats.tsx  Glossary.tsx  KPICard.tsx  MapCanvas.tsx  MetricStat.tsx  SourceBadge.tsx  VerdictChip.tsx
apps/web/e2e/: smoke.spec.ts
apps/web/lib/: api.ts  format.ts  mapStyle.ts  methodology-content.ts  types.ts
apps/web/public/: fleet_meta.json
apps/web/stores/: fleet.ts  scenario.ts
data/manual/: bnetza_onshore_auctions.csv  cost_vintages.csv  turbine_map.csv
data/mart/: backtest.json  farms.parquet  marktwerte.parquet  marktwerte_meta.json  prices_hourly.parquet  prices_meta.json  resource.parquet  resource_meta.json  rheingold.duckdb  units.parquet  units_meta.json
data/pipelines/: build_fleet.py  build_mart.py  build_showcase.py  download_mastr.py  download_smard.py  gwa_download.py  marktwerte.py  mastr_zip_fetch.py  resource.py  resource_lib.py
deploy/: README-deploy.md
docs/: DATA_SOURCES.md  MART_SCHEMA.md  MODEL_CARD.md  RHEINGOLD_BUILD_SPEC.md  VIDEO_SCRIPT.md  architecture.mmd
(+35 files in other folders)
