[project]
name = "rheingold-workspace"
version = "0.1.0"
description = "RHEINGOLD — German renewable-energy project-finance intelligence platform (workspace root)"
requires-python = ">=3.11"
dependencies = [
    "rheingold-engine",
    "rheingold-agents",
    "rheingold-api",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "httpx>=0.27",
]
pipelines = [
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "requests>=2.32",
    "open-mastr>=0.14",
    "windpowerlib>=0.2.2",
    "rasterio>=1.3",
]

[tool.uv.workspace]
members = ["packages/engine", "packages/agents", "apps/api"]

[tool.uv.sources]
rheingold-engine = { workspace = true }
rheingold-agents = { workspace = true }
rheingold-api = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/engine/tests", "packages/agents/tests", "apps/api/tests"]
