[project]
name = "rheingold-api"
version = "0.1.0"
description = "RHEINGOLD FastAPI service — fleet, underwrite, memo SSE, backtest"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "duckdb>=1.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.1",
    "rheingold-engine",
    "rheingold-agents",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rheingold_api"]

[tool.uv.sources]
rheingold-engine = { workspace = true }
rheingold-agents = { workspace = true }
